tvinna.is cors workaround for web

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/alfred.json":["assets/alfred.json"],"assets/tvinna.txt":["assets/tvinna.txt"]}
+{"assets/alfred.json":["assets/alfred.json"],"assets/tvinna.txt":["assets/tvinna.txt"],"assets/tvinnacss.txt":["assets/tvinnacss.txt"],"assets/tvinnadatabase.txt":["assets/tvinnadatabase.txt"],"assets/tvinnahtml.txt":["assets/tvinnahtml.txt"],"assets/tvinnajavascript.txt":["assets/tvinnajavascript.txt"],"assets/tvinnasql.txt":["assets/tvinnasql.txt"]}
